--- a/todo
+++ b/todo
@@ -1,10 +1,4 @@
-- Device configuration
-
 - MVP
-  - Layer3
-    - ip interface
-    - ip header
-    - basic forwarding (no routing)
   - Layer4
     - udp interface
     - udp header
@@ -18,6 +12,10 @@
     - crc
   - Layer4
     - checksum
+
+- Device configuration
+
+- ARP
 
 - Switches
 
