--- a/todo
+++ b/todo
@@ -1,8 +1,3 @@
-- MVP
-  - Layer4
-    - udp interface
-    - udp header
-
 - Reliability
   - Layer1
     - single bit errors
@@ -15,11 +10,15 @@
 
 - Device configuration
 
+- Scenario testing
+
 - ARP
 
 - Switches
 
 - Routers
+
+- Layer Interfaces
 
 - IP
   - Forwarding
